# ai-ops-agent

./: .gitignore  README.md
src/: .env  main.py  pyproject.toml  runtime_logging.py
src/.agent/: memory.db
src/ai_ops_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cache/: __init__.py  message_cache_context.py  message_cache_store.py  redis.py
src/db/: __init__.py  db_store.py
src/embedding/: __init__.py  embedding.py
src/flow/: __init__.py  flow.py  main.py
src/flow/modules/agent_executor_graph/: agent_executor_graph.py  agent_state.py  build_langgraph_graph.py  plan_step.py
src/llm/: llm.py
src/llm/prompts/: README.md  analysis_system_prompt.txt  analysis_user_prompt.txt  fixed_flow_execute_system_prompt.txt  intent_recognition_system_prompt.txt  intent_recognition_user_prompt.txt  plan_execute_step_system_prompt.txt  plan_execute_step_user_prompt.txt  planner_system_prompt.txt  planner_user_prompt.txt  sensitive_operation_system_prompt.txt  sensitive_operation_user_prompt.txt  summary_user_prompt.txt
src/log/: __init__.py  log.py  log_content_cleaner.py
src/prompts/: README.md  summary_system_prompt.txt
src/qdrant/: __init__.py  qdrant.py
src/skills/: README.md  default.skill.md
src/skills/get_code/: SKILL.md
src/skills/get_log/: SKILL.md
src/src/.agent/: memory.db
src/tool/: __init__.py  code_tool.py
src/web/: __init__.py  app.py  schemas.py
src/web/middleware/: __init__.py  flow_bridge.py
src/web/routes/: __init__.py  analyze.py
src/web/static/: app.js  styles.css
src/web/templates/: index.html
(+62 files in other folders)
