[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ops-agent"
version = "0.1.0"
description = "AIOps Agent demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "drain3>=0.9.11",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "jinja2>=3.1.6",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.0",
  "llama-index>=0.11.0",
  "llama-index-embeddings-openai>=0.2.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "redis>=5.0.0",
  "pymysql>=1.1.0",
  "python-multipart>=0.0.20",
  "qdrant-client>=1.9.0",
  "sqlalchemy>=2.0.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
cache_dir = "../.pytest_cache"
